# oscovida

./: .gitignore  .pre-commit-config.yaml  .travis.yml  .venv  Dockerfile  LICENSE  Makefile  README.md  README.rst  comparison.ipynb  constraints.txt  coronavirus.py  current-trends.ipynb  current-trends2.ipynb  dashboard.ipynb  data.txt  germany-minuit-exp.ipynb  germany.ipynb  ideas.md  ideas.org  index.ipynb  info.md  info.org  mkdocs.yml  model.ipynb  model2.ipynb  pyproject.toml  refactoring_tests.ipynb  requirements.txt  requirements_pelican.txt  setup.py  spain-cases-david.ipynb  spain.ipynb  summary.md  test_corona.py  todo.md  todo.org  walkthrough.ipynb
.github/singularity/: setup-runner.py  singularity.def
.github/workflows/: pr-test.yml  pre-commit.yml  python-package.yml  python-publish.disable  python-publish.yml  test.yml  unit-tests.yml
archive/: current-trends.ipynb  current-trends2.ipynb  germany-minuit-exp.ipynb  model.ipynb  readme-2020-04-01.md  readme-old.md
archive/figures/: Germany-model-parameters.txt  germany-predicted-infections.txt  table-1.md
binder/: apt.txt  info.txt  postBuild  requirements.txt
coronavirus/: __init__.py  coronavirus.py  metadata.py
dev/: 2020-05-21-new-outbreaks-in-germany.ipynb  2020-are-summer-holidays-triggering-rising-cases.ipynb  2020-thanksgiving-us-dev.ipynb  RKI_Corona_Landkreise.csv  colourscheme.ipynb  compare-rki-and-johns-hopkins.ipynb  computing-observables-draft.ipynb  debug-make_compare_plot.ipynb  divi.ipynb  do-RKI-numbers-change.ipynb  doubling-time-table.ipynb  equation-doubling-time.ipynb  exploration-doubling-time.ipynb  exploration-rolling-window.ipynb  explore-COVID19Py.ipynb  finetune-smoothing.ipynb  germany-compare-counties-plot.ipynb  germany-local-data.ipynb  germany-summer-holidays-2020.csv  hamburg-cases-robert-jl.ipynb  observables.ipynb  pelican-themes-review.org  plot-quality.ipynb  spain-cases-david.ipynb  terminology.org
dev/issues/: issue-245-summary.org  issue-245.ipynb  issue-245.sh
dev/local_files/: covid19.isciii.es__serie_historica_acumulados.csv  epdata.es__casos_acumulados_de_coron.csv  epdata.es__fallecimientos_diarios_po.csv  epdata.es__muertes_por_coronavirus_e.csv  epdata.es__nuevos_casos_diarios_de_c.csv
docs/: api.md  contributing.md  index.md  quick-start.ipynb  quick-start.md
docs/api/: plotting.md  regions.md  statistics.md
figures/: germany-model-parameters.txt  germany-predicted-infections.txt  table-1.html  table-1.md
hun_jupyter/: Untitled1.ipynb  datafile loading.ipynb  germany table.ipynb  oscovid_wragling.py
notebooks/: coronavirus  dashboard.ipynb  generate-countries.ipynb  germany.ipynb  index.ipynb  r-factor.ipynb  spain.ipynb
oscovida/: __init__.py  covid19dh.py  data_sources.py  hungary_data.py  metadata.py  oscovida.py  pandas-metadata-issue.ipynb  plan.md  plots.py  plotting_helpers.py  regions.py  statistics.py  tools.py  utils.py
oscovida/backup_data/: RKI_Corona_Landkreise.csv  UID_ISO_FIPS_LookUp_Table.csv
oscovida/covid19dh/: __init__.py  cache.py  cite.py  main.py
oscovida/original/: data.py  metadata.py  plotting.py  statistics.py
oscovida/plots/: __init__.py  _matplotlib.py  _plotly.py
oscovida/report_generators/: cli.py  executors.py  index.py
oscovida/reports/: __init__.py  template-report.py
oscovida/web/: index.py  reporters.py  template-report.py
src/oscovida/: __init__.py  covid19dh.py  regions.py  statistics.py
tests/: conftest.py  test_corona.py  test_covid19dh.py  test_metadata.py  test_regions.py  test_statistics.py
tests/plots/: test_backnd_system.ipynb  test_matplotlib.ipynb  test_plotly.ipynb
tools/: Makefile  check-metadata-status.ipynb  cron-job-update-webpages.fish  cron-job-update-webpages.sh  generate-countries.ipynb  generate-countries.py  generate-countries2.ipynb  generate-countries3.ipynb  generate-individiual-plots.ipynb  generate-webpage-clean-setup.py  generate-webpage-clean-setup.sh  joblibmemorydemo.ipynb  plan.org  requirements-for-binder.txt  template-US.ipynb  template-country.ipynb  template-germany-land.ipynb  template-germany.ipynb  template-hungary-practice.ipynb  template-hungary.ipynb  template-report.py  test-plots-for-all-regions.ipynb  test_figure_creation.py
tools/docker/: Dockerfile
tools/frontpage/: Makefile  about.md  index.md  todo.md
tools/ipynb/: Hungary-Békés.ipynb  Hungary-Zala.ipynb
tools/oscovida.github.io/: post-generate.sh  readme.md
tools/pelican/: Makefile  info.md  pelicanconf.py  publishconf.py
tools/report_generators/: cli.py  executors.py  incidence_rates.py  index.py  index_page_gen.py  report_gen.py  reporters.py
tools/wwwroot/: 2020-04-30-bbc-germany-increasing-notebook.html  2020-04-30-news-report-germanys-daily-cases-increasing.html  2020-05-10-notebook-Weekly-fluctuations-in-data-from-Germany.html  all-regions.html  archives-index.html  category-all.html  contribute.html  countries.html  data-sources.html  faq.html  germany.html  hungary.html  index.html  license.html  motivation.html  open-science.html  oscovida-in-the-news.html  plots.html  related-resources.html  reproduction-number.html  tag-about.html  tag-analysis.html  tag-code.html  tag-data.html  tag-faq.html  tag-germany.html  tag-license.html  tag-news.html  tag-plots.html  (+12 more)
(+185 files in other folders)
