[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.black]
skip-string-normalization = true
target-version = ['py38']  # Specify your Python version
include = '\.pyi?$'
exclude = '''  # Specify the files/dirs that should be ignored by the black formatter
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | template-.*\.py
)/
'''

[tool.isort]
skip = "template-*.py"
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
ensure_newline_before_comments = "True"
line_length = 88

[tool.poetry]
name = "oscovida"
version = "0.1.2"
description = "Explore COVID19 case numbers and deaths related to Coronavirus outbreak 2019/2020 in Pandas and in Jupyter notebook with MyBinder"
license = "BSD-3-Clause"
classifiers = ["Intended Audience :: Developers", "Intended Audience :: Science/Research", "License :: OSI Approved :: BSD License", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3", "Topic :: Scientific/Engineering :: Information Analysis"]
homepage = "https://github.com/oscovida/oscovida"
authors = ["Hans Fangohr <da-support@xfel.eu>", "Robert Rosca", "Yury Kirienko"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
joblib = "^0.16.0"
seaborn = "^0.10.1"
matplotlib = "<3.3"
markdown = "^3.2.2"
numpy = "^1.19.0"
scipy = "^1.5.1"
pelican = "^4.2.0"
pelican-jupyter = "^0.10.0"
tabulate = "^0.8.7"
tqdm = "^4.48.0"
ipywidgets = "^7.5.1"
ipynb_py_convert = "^0.4.5"
click = "^7.1.2"
pycountry = "^20.7.3"
requests = "^2.24.0"
pandas = "^1.1.0"
multipledispatch = "^0.6.0"
appdirs = "^1.4.4"
plotly = { version = "^4.9.0", optional = true }
psutil = { version = "^5.7.2", optional = true }
kaleido ={ version =  "^0.0.3", optional = true }

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = "^5.2"
dephell = "^0.8.3"
hypothesis = "^5.32.0"
ipython = "^7.16.1"
isort = "^5.4.2"
jupyterlab = "^2.2.0"
mkdocs = "^1.1.2"
mkdocs-material = "^5.5.12"
mkdocstrings = "^0.13.2"
mknotebooks = "^0.6.2"
Pygments = "^2.7.2"
pymdown-extensions = "^8.0.1"
mutmut = "^2.1.0"
nbval = "^0.9.5"
pre-commit = "^2.7.1"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
testpath = "^0.4.4"

[tool.poetry.extras]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings", "pymdown-extensions", "mknotebooks", "Pygments"]
plotly = ["plotly", "psutil", "kaleido"]
formatting = ["black", "dephell", "isort", "pre-commit"]
test = ["coverage", "hypothesis", "mutmut", "nbval", "pytest", "pytest-cov", "testpath"]
dev = ["plotly", "psutil", "kaleido"]  # Add the optional dependencies to dev
